# SP

./: .gitmodules
src/strategy/: CMakeLists.txt
src/strategy/Kidsize_HuroCup/: TSprintinfo.cpp  aruco.cpp  robot.py  robot2.0.py  strategy_main.cpp  test.py
src/strategy/Parameter/: 1.ini  20180503.ini  20200217.ini  20200219.ini  20200327.ini  20200402.ini  20200416.ini  20200528.ini  20200626.ini  20200703.ini  20210727.SP.ini  20210730SP.ini  20210804SP.ini  CameraSet.ini  ColorModelData.ini  Continuous_Back.ini  Continuous_Second_Parameter.ini  Single_Parameter.ini  quickchage.ini  test.ini
src/strategy/Parameter/sector/: 1.ini  10.ini  11.ini  12.ini  2.ini  30.ini  4.ini  5.ini  6.ini  8.ini  87.ini
src/strategy/include/strategy/: TSprintinfo.h  aruco.hpp  strategy_main.h
src/strategy/msg/: aruco_matrix.msg  quickchange.msg
src/strategy/quickchange/: quickchange.html
src/strategy/srv/: Loadquickchange.srv
